--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,3 +1,8 @@
 # English strings go here for Rails i18n
 en:
   # my_label: "My label"
+  label_repository_url: "GIT Repository URL"
+  label_download_branch: "Select Branch"
+  label_format: "Format"
+  label_git_download: "GIT Download"
+  label_gitdownload_host: "GIT Remote URL"
