add settings, extend controller with download action

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -6,3 +6,6 @@ de:
   label_download_format: "Format"
   label_git_download: "GIT Download"
   label_gitdownload_host: "GIT Url"
+  git_show_repourl: "Projektarchiv URL anzeigen"
+  git_show_branch: "Branch Download erlauben"
+  git_show_revs: "Revision Download erlauben"
