--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,3 +6,6 @@ en:
   label_format: "Format"
   label_git_download: "GIT Download"
   label_gitdownload_host: "GIT Remote URL"
+  git_show_repourl: "Show repository URL"
+  git_show_branch: "Allow branch download"
+  git_show_revs: "Allow revision download"
