--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,7 @@
 # English strings go here for Rails i18n
 en:
   # my_label: "My label"
+  label_gitdownload_config: "Configuration: Gitdownload plugin"
   label_repository_url: "GIT Repository URL"
   label_download_branch: "Select Branch"
   label_format: "Format"
@@ -9,3 +10,4 @@ en:
   git_show_repourl: "Show repository URL"
   git_show_branch: "Allow branch download"
   git_show_revs: "Allow revision download"
+  git_archive_last: "Delete files older than (min)"
