change labels and fix error msg styles

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -7,6 +7,7 @@ de:
   label_download_format: "Format"
   label_git_download: "GIT Download"
   label_gitdownload_host: "GIT Url"
+  label_reporitory_error: "Branch oder Revision auswählen"
   git_show_repourl: "Projektarchiv URL anzeigen"
   git_show_branch: "Branch Download erlauben"
   git_show_revs: "Revision Download erlauben"
