--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,3 +12,4 @@ en:
   git_show_branch: "Allow branch download"
   git_show_revs: "Allow revision download"
   git_archive_last: "Delete files older than (min)"
+  git_details: "Repository export details"
