Add new translations

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -14,3 +14,10 @@ de:
   git_show_revs: "Revision Download erlauben"
   git_archive_last: "Dateien die älter sind als X min löschen"
   git_details: "Repository-Export Details"
+  field_repository_create: "Repository erstellen"
+  git_repo_create_path: "Pfad zu den Repositories"
+  git_auto_create_repo: "Repository per Default erstellen"
+  git_configfile: "Git Konfiguration (.gitconfig)"
+  git_copyfiles: "Dateien in Repository kopieren"
+  git_configfile_info: "Benötigte Konfiguration (muss mindestens so konfiguriert sein):"
+  git_copyfiles_info: "Inhalt des angegebenen Ordners wird in zu erstellende Repository kopiert (inkl. dotfiles)"
